# TimeToGetRusty

_enums/enums/src/: main.rs
_enums/if_let/src/: main.rs
_enums/option/src/: main.rs
_structs/rectangles/src/: main.rs
_structs/rectangles_advanced/src/: main.rs
_structs/structs/src/: main.rs
branches/src/: main.rs
cargo/documentation/src/: lib.rs
cargo/export-api/: Cargo.toml
cargo/export-api/src/: lib.rs
cargo/export_api/src/: main.rs
cargo/workspaces/: Cargo.toml
cargo/workspaces/adder/: Cargo.toml
cargo/workspaces/adder/src/: main.rs
checkpoint-1/minigrep/src/: main.rs
checkpoint1/minigrep/src/: lib.rs  main.rs
closures/intro/src/: main.rs
closures/ownership/src/: main.rs
closures/src/: main.rs
collections/hashmap/src/: main.rs
collections/strings/src/: main.rs
collections/vectors/src/: main.rs
enums/option/src/: main.rs
error-handling/: README.md
error-handling/error-propagation/: Cargo.toml
error-handling/error-recovery/src/: main.rs
error_handling/error_recovery/: Cargo.toml
error_handling/src/: main.rs
functions/src/: main.rs
guessing-game/: Cargo.toml
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
iterators/usage/: Cargo.toml
loops/src/: main.rs
modules/restaurant_updated/: Cargo.toml
ownership/src/: main.rs
references/src/: main.rs
slices/src/: main.rs
smart-pointers/: README.md
structs/rectangles_advanced/: Cargo.toml
testing/: README.md
testing/src/: lib.rs
testing/tests/: integration_test.rs
traits/: Cargo.toml
traits/src/: bin.rs  lib.rs
variables/src/: main.rs
(+19 files in other folders)
